<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin_8"
    android:paddingEnd="@dimen/margin_8"
    android:paddingBottom="@dimen/margin_8">

    <TextView
        android:id="@+id/dialog_neutral_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_2.5"
        android:foreground="@drawable/dialog_buttons_ripple"
        android:padding="@dimen/margin_12"
        android:text="@string/dialog_neutral_button"
        style="@style/MediumBoldText"
        android:textColor="@color/button_color_state"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/dialog_negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/dialog_positive_button"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_2.5"
        android:foreground="@drawable/dialog_buttons_ripple"
        android:padding="@dimen/margin_12"
        android:text="@string/dialog_negative_button"
        style="@style/MediumBoldText"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/dialog_positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_2.5"
        android:foreground="@drawable/dialog_buttons_ripple"
        android:padding="@dimen/margin_12"
        android:text="@string/dialog_positive_button"
        style="@style/MediumBoldText"
        android:textColor="@color/button_color_state"
        android:textSize="@dimen/text_16" />

</RelativeLayout>